--- a/src/styles/CustomHeader.css
+++ b/src/styles/CustomHeader.css
@@ -1,53 +1,81 @@
+.header {
+  background-image: url("../resource/bg2.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 70vw;
+  /* display: flex; */
+  padding: 0;
+}
 
-.header{
-    background-image:url("../resource/bg2.jpeg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    /* background-attachment: fixed; */
-    background-size:cover;
-    min-height: 250px;
-    display: flex;
-    
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .row{
-    text-align: start;
-  }
-  
-  .comp-name{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 3vw;
-    font-weight: bolder;
-    color: rgb(7, 57, 99);
-  }
-  
-  .container{
-    margin-left: 10vw;
-  }
-  
-  .name-space{
-    margin: 1vw;
-  }
-  
-  .text{
-    color:rgb(252, 251, 251);
-    font-size: 2vw;
-    font-weight: bold;
-  }
-  
-  .image{
-    width: 6vw;
-    height: 6vw;
-  }
-  
-  .alignment{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-  }
 
-  .requiredspace{
-    margin-top: 2vw;
-  }
+.comp-name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.5vw;
+  font-weight: bolder;
+  color: rgb(242, 243, 243);
+  margin: 0.5vw;
+}
+
+
+.text {
+  color: rgb(252, 251, 251);
+  font-size: 1.5vw;
+  font-weight: bold;
+  margin: 0.5vw;
+}
+
+.image {
+  width: 6vw;
+  height: 6vw;
+}
+
+
+.center{
+  display: flex;
+  justify-content: center;
+}
+
+.coloring {
+  /* background: rgba(0,0,0,0.5); */
+  /* background: rgba(0,0,0,0.5); */
+  background: linear-gradient(0deg, rgb(71, 71, 71) 0%, rgba(0, 0, 0, 0.5) 99%);
+  width: 100%;
+  min-height: 70vw;
+  /* height: 100%; */
+}
+
+.content {
+  margin-top: 20vw;
+}
+
+.requiredspace {
+  padding: 1vw;
+}
+
+.spacing{
+  display: grid;
+  width: max-content;
+  justify-items: center;
+  
+}
+
+/* .rowelement{
+  justify-content:  center;
+} */
+
+/* .row{
+  text-align: start;
+} */
+/* 
+
+/* .alignment {
+  align-items: center;
+  height: max-content;
+  width: max-content; 
+  display: flex;
+} */
+
+/* .container{
+  margin-left: 10vw;
+}  */
