--- a/src/styles/Quotes.css
+++ b/src/styles/Quotes.css
@@ -4,20 +4,26 @@
 }
 
 .para{
-    font-size: 1.5vw;
-    padding: 0;
+    font-size: 2vw;
+    margin: 1vw;
     text-align: center;
+    font-style: italic;
 }
 
 .headfont{
-    font-size: 3vw;
-    font-weight: bolder;
+    font-size: 1.5vw;
+    font-weight: bold;
 }
 
 .bimage{
     width: 100vw;
     height: 25vw;
+    opacity: 0.6;
     /* margin-top: 20vw; */
+}
+
+.opac{
+    opacity: 0.8;
 }
 
 .practicehead{
