--- a/src/styles/CustomHeader.css
+++ b/src/styles/CustomHeader.css
@@ -10,7 +10,7 @@
 
 
 .comp-name {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 2.5vw;
   font-weight: bolder;
   color: rgb(242, 243, 243);
