--- a/src/styles/CustomHeader.css
+++ b/src/styles/CustomHeader.css
@@ -13,13 +13,13 @@
   /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 2.5vw;
   font-weight: bolder;
-  color: rgb(242, 243, 243);
+  color: whitesmoke;
   margin: 0.5vw;
 }
 
 
 .text {
-  color: rgb(252, 251, 251);
+  color: whitesmoke;
   font-size: 1.5vw;
   font-weight: bold;
   margin: 0.5vw;
