--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,11 @@
 } */
 
 .background{
-  background-color: antiquewhite;
+  /* background-color: #dceaf3; */
+  /* background-color: rgb(206, 236, 241); */
+  /* background-color: azure; */
+  /* background: rgb(148,147,147);
+background: linear-gradient(0deg, rgba(148,147,147,0.9956914650625875) 0%, rgba(184,183,183,1) 19%, rgba(250,250,250,1) 99%); */
+background: rgb(195,235,243);
+background: linear-gradient(0deg, rgba(195,235,243,0.8724421653426996) 0%, rgba(220,228,228,0.8444309608609069) 19%, rgba(230,251,251,1) 99%);
 }
