--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,21 +1,28 @@
 .learnaboutus{
-    margin: 6vw;
+    margin:10vw;
     text-align: center;
 }
 
 .tag{
-    border: 1px solid orange;
-    padding: 2vw;
+    border: 1px solid rgb(94, 111, 114);
+    border-radius: 10px;
+    padding: 4vw;
+    box-shadow: 5px 5px 2px 2px rgb(101, 120, 124) ;
+    background-color: aliceblue;
 }
 
 .paragraph{
-    text-align: justify;
-    font-size: 1.5vw;
+    text-align: center;
+    font-size: 2vw;
     font-style: italic;
     margin-bottom: 0;
+    color: rgb(22, 22, 22);
 }
 
 .abouthead{
-    font-size: 2vw;
+    font-size: 3vw;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 2vw;
+    color: rgb(35, 5, 204);
+    font-weight: bolder;
 }
