--- a/src/styles/CustomHeader.css
+++ b/src/styles/CustomHeader.css
@@ -3,7 +3,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 70vw;
+  max-height: 70vw;
   /* display: flex; */
   padding: 0;
 }
