--- a/src/styles/Practices.css
+++ b/src/styles/Practices.css
@@ -1,6 +1,12 @@
 .title{
-    margin: 8vw;
+    margin-top: 8vw;
+    margin-bottom: 8vw;
+    margin-left: 0;
+    margin-right: 0;
     text-align: center;
+    background-color: rgb(34, 34, 155);
+    height: max-content;
+    padding: 1vw;
 }
 
 .para{
@@ -14,13 +20,22 @@
     font-weight: bolder;
 }
 
-.bimage{
+/* .bimage{
     width: 100vw;
     height: 25vw;
-    /* margin-top: 20vw; */
+    
+} */
+
+.card_content{
+    display: flex;
+    flex-wrap:wrap ;
+    justify-content: space-around;
 }
 
 .practicehead{
-    font-size: 2vw;
-    margin: 2vw;
+        font-size: 3vw;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 2vw;
+        color: white;
+        font-weight: bolder;
 }
