--- a/src/styles/Whyus.css
+++ b/src/styles/Whyus.css
@@ -1,9 +1,17 @@
-.learnaboutus{
+.span1 {
+  font-weight: bold;
+}
+
+.span2 {
+  font-weight: bold;
+}
+
+.whyus{
     margin:10vw;
     text-align: center;
 }
 
-.tag{
+.ytag{
     border: 1px solid rgb(94, 111, 114);
     border-radius: 10px;
     padding: 4vw;
@@ -11,7 +19,7 @@
     background-color: aliceblue;
 }
 
-.paragraph{
+.parag{
     text-align: center;
     font-size: 1.6vw;
     font-style: italic;
@@ -19,7 +27,7 @@
     color: rgb(22, 22, 22);
 }
 
-.abouthead{
+.whyhead{
     font-size: 3vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 2vw;
