Quotes margin edited

--- a/src/styles/Quotes.css
+++ b/src/styles/Quotes.css
@@ -1,5 +1,8 @@
 .quotetitle{
-    margin: 8vw;
+    margin-bottom: 8vw;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    margin-top: 4vw;
     text-align: center;
 }
 
