--- a/src/styles/Practices.css
+++ b/src/styles/Practices.css
@@ -1,23 +1,32 @@
-.title{
-    margin-top: 8vw;
-    margin-bottom: 8vw;
-    margin-left: 0;
-    margin-right: 0;
-    text-align: center;
-    background-color: rgb(34, 34, 155);
-    height: max-content;
-    padding: 1vw;
+.title {
+  margin-top: 8vw;
+  margin-bottom: 8vw;
+  margin-left: 0;
+  margin-right: 0;
+  text-align: center;
+  /* background-color: rgb(34, 34, 155); */
+  /* background-color: #afd9f8; */
+  background: rgb(109, 219, 241);
+  background: linear-gradient(
+    50deg,
+    rgba(109, 219, 241, 0.8724421653426996) 0%,
+    rgba(44, 166, 192, 0.8444309608609069) 20%,
+    rgba(28, 137, 161, 1) 63%,
+    rgba(7, 91, 112, 1) 99%
+  );
+  height: max-content;
+  padding: 1vw;
 }
 
-.para{
-    font-size: 1.5vw;
-    padding: 0;
-    text-align: center;
+.para {
+  font-size: 1.5vw;
+  padding: 0;
+  text-align: center;
 }
 
-.headfont{
-    font-size: 3vw;
-    font-weight: bolder;
+.headfont {
+  font-size: 3vw;
+  font-weight: bolder;
 }
 
 /* .bimage{
@@ -26,16 +35,17 @@
     
 } */
 
-.card_content{
-    display: flex;
-    flex-wrap:wrap ;
-    justify-content: space-around;
+.card_content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.practicehead{
-        font-size: 3vw;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin: 2vw;
-        color: white;
-        font-weight: bolder;
+.practicehead {
+  font-size: 3vw;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 2vw;
+  color: white;
+  font-weight: bolder;
 }
