--- a/src/styles/Whyus.css
+++ b/src/styles/Whyus.css
@@ -6,31 +6,43 @@
   font-weight: bold;
 }
 
-.whyus{
-    margin:10vw;
-    text-align: center;
+.whyus {
+  margin-top: 10vw;
+  margin-bottom: 10vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  text-align: center;
 }
 
-.ytag{
-    border: 1px solid rgb(94, 111, 114);
-    border-radius: 10px;
-    padding: 4vw;
-    box-shadow: 0px 0px 15px 5px rgb(101, 120, 124) ;
-    background-color: aliceblue;
+.ytag {
+  /* border: 1px solid rgb(94, 111, 114); */
+  border-radius: 10px;
+  /* padding: 4vw; */
+  box-shadow: 0px 0px 15px 5px rgb(101, 120, 124);
+  background-color: aliceblue;
+  display: flex;
 }
 
-.parag{
-    text-align: center;
-    font-size: 1.6vw;
-    font-style: italic;
-    margin-bottom: 0;
-    color: rgb(22, 22, 22);
+.whyusimage{
+  padding: 2vw;
+  width: 24vw;
+  height: 25vw;
 }
 
-.whyhead{
-    font-size: 3vw;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 2vw;
-    color: rgb(35, 5, 204);
-    font-weight: bolder;
+.parag {
+  padding: 2vw;
+  text-align: center;
+  font-size: 1.6vw;
+  font-style: italic;
+  margin-bottom: 0;
+  color: rgb(22, 22, 22);
+}
+
+.whyhead {
+  font-size: 3vw;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 2vw;
+  color: rgb(35, 5, 204);
+  font-weight: bolder;
 }
