--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -12,12 +12,12 @@
     /* padding: 4vw; */
     background-color: rgb(207, 227, 245);
     display: flex;
-    transition: box-shadow 0.3s, transform 0.3s;
+    transition: box-shadow 0.3s;
 }
 
 .tag:hover{
     box-shadow: 0px 0px 15px 5px rgb(101, 120, 124) ;
-    transform: scale(1,1);
+    /* transform: scale(1,1); */
 }
 
 .learnusimage{
