--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -23,9 +23,9 @@
     border: 1px solid black;
     margin:2vw;
     padding: 1vw;
-    transition: box-shadow 0.3s, transform 0.3s;
+    transition: box-shadow 0.3s;
 }
 .card:hover{
     box-shadow: 0px 0px 30px 20px rgb(40, 119, 143);
-    transform:scale(1,1);
+    /* transform:scale(1,1); */
 }
