--- a/src/styles/Whyus.css
+++ b/src/styles/Whyus.css
@@ -18,14 +18,14 @@
   /* border: 1px solid rgb(94, 111, 114); */
   border-radius: 10px;
   /* padding: 4vw; */
-  transition: box-shadow 0.3s, transform 0.3s;
+  transition: box-shadow 0.3s;
   background-color: rgb(207, 227, 245);
   display: flex;
 }
 
 .ytag:hover{
   box-shadow: 0px 0px 15px 5px rgb(101, 120, 124);
-  transform: scale(1,1);
+  /* transform: scale(1,1); */
 }
 
 .whyusimage{
